tests/baselines/reference/symbolProperty9.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty9.ts(10,5): error TS2322: Type 'I' is not assignable to type 'C'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '{ x: 任意; }' is not assignable to type '{ x: 任意; y: 任意; }'.
      Property 'y' is missing in type '{ x: 任意; }'.


==== tests/cases/conformance/es6/Symbols/symbolProperty9.ts (1 errors) ====
    class C {
        [Symbol.iterator]: { x; y };
    }
    interface I {
        [Symbol.iterator]: { x };
    }
    
    var i: I;
    i = new C;
    var c: C = i;
        ~
!!! error TS2322: Type 'I' is not assignable to type 'C'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '{ x: 任意; }' is not assignable to type '{ x: 任意; y: 任意; }'.
!!! error TS2322:       Property 'y' is missing in type '{ x: 任意; }'.